# reskit

./: README.md  pyproject.toml
reskit/: cli.py
reskit/templates/: README_template.md  analysis_template.ipynb
