[project]
name = "reskit"
version = "0.0.1"
description = "A lightweight toolkit for initializing clean, reproducible research projects."
authors = [
    { name = "Chayce Reed" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = []

[project.scripts]
reskit = "reskit.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["reskit"]